<resources>
    <string name="app_name">LerntagebuchOOP</string>
    <string name="title_activity_base">BaseActivity</string>
    
    <!-- actionBar -->
    <string name="actionbar_topic">defaultTopic</string>
    <string name="actionbar_topic_login">Login</string>
    <string name="actionbar_topic_all_topics">Alle Themen</string>
    <string name="actionbar_topic_tasks">Aktuelle Aufgaben</string>
    <string name="actionbar_topic_feedback_questions">Nachrichten</string>
    <string name="actionbar_topic_settings">Einstellungen</string>
    <string name="actionbar_topic_uncertainties">Unklarheiten klären</string>

    <!-- activity_login -->
    <string name="login_button_login">Login</string>
    <string name="settings_label_student">Student: Max Mustermann</string>
    <string name="settings_label_matrnr">MatrNr: 123456</string>
    <string name="settings_label_points">Punktestand: 0/10 </string>
    <string name="settings_label_rules">Spielregeln für zusätzliche Klausurpunkte</string>
    <string name="settings_label_notifications">Benachrichtigungen</string>
    <string name="settings_notification_warning">Noch-Nichts-Abgegeben-Warnung</string>
    <string name="settings_notification_new_question">Neue Fragen können bearbeitet werden</string>
    <string name="settings_notification_tutor">Nachricht vom Tutor</string>
    <string name="settings_button_logout">Ausloggen</string>
    <string name="settings_LLink_impressum"><![CDATA[Impressum & Datenschutz]]></string>

</resources>
